--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+altgraph==0.17
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
 backcall==0.2.0
 bleach==3.3.0
+bottle==0.12.19
+bottle-websocket==0.2.9
+cachelib==0.1.1
 cffi==1.14.5
 click==7.1.2
 colorama==0.4.4
@@ -10,10 +14,17 @@ cycler==0.10.0
 czifile==2019.7.2
 decorator==4.4.2
 defusedxml==0.7.1
+Eel==0.14.0
 entrypoints==0.3
 et-xmlfile==1.0.1
 Flask==1.1.2
-imagecodecs==2021.3.31
+Flask-Session==0.3.2
+Flask-Sessions==0.1.5
+future==0.18.2
+gevent==21.1.2
+gevent-websocket==0.10.1
+greenlet==1.0.0
+imagecodecs==2021.2.26
 imageio==2.9.0
 ipykernel==5.5.3
 ipython==7.22.0
@@ -31,45 +42,57 @@ jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
-matplotlib==3.4.1
+matplotlib==3.3.4
 mistune==0.8.4
 nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
-networkx==2.5.1
+networkx==2.5
 notebook==6.3.0
-numpy==1.20.2
+numpy==1.20.1
 opencv-python==4.5.1.48
 openpyxl==3.0.7
 packaging==20.9
 pandas==1.2.3
 pandocfilters==1.4.3
 parso==0.8.2
+pefile==2019.4.18
 pickleshare==0.7.5
-Pillow==8.2.0
+Pillow==8.1.2
 prometheus-client==0.10.0
 prompt-toolkit==3.0.18
 pycparser==2.20
 Pygments==2.8.1
+pyinstaller==4.2
+pyinstaller-hooks-contrib==2021.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
 PyWavelets==1.1.1
+pywin32==300
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
 pyzmq==22.0.3
 qtconsole==5.0.3
 QtPy==1.9.0
+redis==3.5.3
 scikit-image==0.18.1
-scipy==1.6.2
+scipy==1.6.1
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.4
 testpath==0.4.4
-tifffile==2021.3.31
+tifffile==2021.3.5
 tornado==6.1
+tqdm==4.59.0
 traitlets==5.0.5
+waitress==2.0.0
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
+whichcraft==0.6.1
 widgetsnbextension==3.5.1
+zope.event==4.5.0
+zope.interface==5.2.0
